--- a/style.css
+++ b/style.css
@@ -6,53 +6,62 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
-body{
+
+body {
   height: 100vh;
   background-color: #fff;
 }
+
 header {
   padding: 7px;
   background-color: #31859bff;
 }
-header p{
+
+header p {
   color: #fff3cd;
   text-align: center;
   font-family: 'Roboto Mono', sans-serif;
   font-size: 16px;
 }
-nav{
+
+nav {
   font-family: 'Lato', sans-serif;
   background-color: #fff;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
   -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
 }
-.menu{
+
+.menu {
   display: flex;
   padding: 25px;
   justify-content: flex-end;
 }
-nav ul{
+
+nav ul {
   list-style: none;
   display: block;
 }
 
-.menu li a{
+.menu li a {
   text-decoration: none;
   text-transform: uppercase;
   padding: 20px;
   font-size: 25px;
   color: #444;
 }
+
 .menu li a:link,
-.menu li a:visited{
+.menu li a:visited {
   -webkit-transition: background-color rgb(207, 204, 204) 0.8s;
   -webkit-transition: background-color rgb(207, 204, 204) 1s;
   transition: background-color rgb(207, 204, 204) 4s;
 }
+
 .menu li a:hover,
-.menu li a:active{
+.menu li a:active {
   background-color: rgb(207, 204, 204);
-} 
+}
+
 a:link,
 a:visited {
   color: #9f9f9f;
@@ -65,9 +74,95 @@ a:active {
   background-color: rgb(207, 204, 204);
 }
 
-.banner{
+.banner {
   height: 677px;
   background: url(img/backwaik.png);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+/**********************************************
+            *** ABOUT ***
+**********************************************/
+
+.about{
+  width: 1400px;
+  height: 790px;
+  margin: auto;
+  background-color: #f0f4f7;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  float: right;
+  height: 790px;
+  width: 800px;
+}
+.content h1{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  padding: 20px;
+  margin-top: 30px;
+  margin-left: 50px;;
+  width: 700px;
+  font-size: 60px;
+  color: #191c1f;
+}
+.title-color{
+  color: #31859bff;
+}
+.border-row{
+  border-bottom: 7px solid #31859bff;
+}
+.content p{
+  width: 800px;
+  padding: 5px 20px;
+  margin-top: 20px;
+  font-family: 'Lato', sans-serif;
+  text-align: justify;
+  font-size: 20px;
+  font-weight: 400;
+  color: #191c1f;
+}
+.highlith{
+  border-radius: 5px;
+  padding: 2px 3px;
+  background-color: #b9e4fd;
+}
+.box-social{
+  display: flex;
+  width: 800px;
+  margin-top: 10px;
+  justify-content: center;
+}
+.box-social img{
+  width: 50px;
+  margin: 0 25px;
+}
+.illustration-apropos{
+  position: relative;
+  
+}
+.illustration-apropos img{
+  height: 500px;
+  width: 450px;
+  position: absolute;
+  top: 150px;
+  left: 70px;
+}
+.btn-about{
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+.btn-about a{
+  font-family: 'Lato', sans-serif;
+  border-radius: 5px;
+  border: none;
+  text-decoration: none;
+  padding: 15px;
+  margin: 5px;
+  color: #fff;
+  
+  background-color: #31859bff;
 }
