Update skill section

--- a/style.css
+++ b/style.css
@@ -163,11 +163,11 @@ a:active {
   bottom: 5px;
 }
 
-.illustration-apropos {
+.illustration-about {
   position: relative;
 }
 
-.illustration-apropos img {
+.illustration-about img {
   width: 550px;
   position: absolute;
   top: 200px;
@@ -201,14 +201,80 @@ a:active {
             *** SKILLS ***
 **********************************************/
 
-
 .skill{
   height: 790px;
   width: 1400px;
   margin: auto;
 }
-.skill-content{
+.content-skill{
   display: flex;
   flex-direction: column;
   float: left;
+  height: 790px;
+  width: 800px;
+}
+.content-skill h1{
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+  margin: 5px;
+  font-weight: 700;
+  padding: 20px;
+  margin-top: 35px;
+  margin-left: 50px;
+  width: 700px;
+  text-align: center;
+  font-size: 50px;
+  color: #191c1f;
+}
+hr{
+
+}
+.box-skill{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 75px 105px;
+}
+.box-skill h3{
+  font-size: 30px;
+  color: #191c1f;
+}
+.box-skill p{
+  display: flex;
+  padding-left: 70px;
+  font-size: 20px;
+  margin-top: 10px;
+  color: #191c1f;
+}
+.row{
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+}
+.skill-front{
+
+  padding-bottom: 10px;
+}
+.skill-back{
+  padding-bottom: 10px;
+}
+.row2{
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+}
+.skill-framework{
+}
+.skill-tool{
+
+}
+
+.illustration-skill {
+position: relative;
+}
+.illustration-skill img{
+  width: 600px;
+  float: right;
+  position: absolute;
+  top: 155px;
 }
