--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a:active {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   padding: 20px;
-  margin-top: 15px;
+  margin-top: 10px;
   margin-left: 50px;
   width: 700px;
   text-align: center;
@@ -123,7 +123,7 @@ a:active {
 .content p {
   width: 800px;
   padding: 5px 20px;
-  margin-top: 20px;
+  margin-top: 10px;
   font-family: 'Lato', sans-serif;
   font-size: 22px;
   line-height: 1.5;
@@ -177,7 +177,6 @@ a:active {
 .btn-about {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
 }
 
 .btn-about a {
@@ -202,28 +201,29 @@ a:active {
 **********************************************/
 
 .skill{
-  height: 790px;
+  height: 700px;
   width: 1400px;
   margin: auto;
+  background-color: grey;
 }
 .content-skill{
   display: flex;
   flex-direction: column;
   float: left;
-  height: 790px;
+  height: 700px;
   width: 800px;
+  background-color :green;
 }
 .content-skill h1{
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
   margin: 5px;
   font-weight: 700;
-  padding: 20px;
-  margin-top: 35px;
-  margin-left: 50px;
+  margin: auto;
   width: 700px;
   text-align: center;
   font-size: 50px;
+  background-color: yellow;
   color: #191c1f;
 }
 hr{
@@ -233,7 +233,8 @@ hr{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 75px 105px;
+  margin: 20px 50px;
+  background-color: red;
 }
 .box-skill h3{
   font-size: 30px;
@@ -241,34 +242,69 @@ hr{
 }
 .box-skill p{
   display: flex;
-  padding-left: 70px;
+  justify-content: center;
+  font-family: 'Lato', sans-serif;
   font-size: 20px;
-  margin-top: 10px;
   color: #191c1f;
 }
 .row{
   display: flex;
-  justify-content: center;
-  padding: 50px;
 }
 .skill-front{
-
-  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  height: 290px;
+  padding: 0 50px;
+  background-color: grey;
+}
+.skill-front img{
+  display: flex;
+  margin: auto;
+  width: 50px;
 }
 .skill-back{
-  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  height: 290px;
+  padding: 0 50px;
+  background-color: brown;
+}
+.skill-back img{
+  display: flex;
+  margin: auto;
+  width: 50px;
 }
 .row2{
   display: flex;
-  justify-content: center;
-  padding: 50px;
+  flex-direction: row;
+  justify-content: space-around;
+
+  background-color: brown;
 }
 .skill-framework{
+  align-items: center;
+  height: 290px;
+  padding: 0 39px;
+  background-color: yellow;
+}
+.skill-framework img{
+  display: flex;
+  margin: auto;
+  width: 50px;
 }
 .skill-tool{
-
+  align-items: center;
+  height: 290px;
+  padding: 0 72.5px;
+  background-color: cyan;
 }
-
+.skill-tool img{
+  display: flex;
+  margin: auto;
+  width: 50px;
+}
 .illustration-skill {
 position: relative;
 }
