--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ a:active {
   border: none;
   text-decoration: none;
   padding: 15px;
+  margin-right: 10px;
   text-transform: capitalize;
   color: #fff;
   background-color: #31859bff;
