--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ a:active {
   float: left;
   height: 720px;
   width: 800px;
+  margin-top: 35px;
   background-color: cyan;
 }
 .content-skill h1{
