Add the project section

--- a/style.css
+++ b/style.css
@@ -315,3 +315,17 @@ width: 150px;
   position: absolute;
   top: 155px;
 }
+
+/**********************************************
+            *** PROJECT ***
+**********************************************/
+
+.project{
+
+}
+.content-project{
+
+}
+.box-project{
+  
+}
