--- a/style.css
+++ b/style.css
@@ -12,55 +12,40 @@ body {
   background-color: #fff;
 }
 
-header {
-  padding: 7px;
-  background-color: #31859bff;
-}
-
-header p {
-  color: #fff3cd;
-  text-align: center;
-  font-family: 'Roboto Mono', sans-serif;
-  font-size: 16px;
-}
-
 nav {
   font-family: 'Lato', sans-serif;
-  background-color: #fff;
-  width: 1300px;
-  margin: auto;
-  border-bottom: 1px solid #ffe3c3;
-}
-
-.logo {
-  position: relative;
-  width: 50px;
-  background-color: red;
-}
-
-.logo img {
-  position: absolute;
-  top: 15px;
-  right: 80px;
-}
-
-.menu {
-  display: flex;
-  padding: 25px;
-  justify-content: flex-end;
+  position: fixed;
+  width: 100%;
+  line-height: 60px;
+  z-index: 99;
 }
 
 nav ul {
+  line-height: 60px;
   list-style: none;
-  display: block;
+  overflow: hidden;
+  color: #fff;
+  padding: 0;
+  text-align: right;
+  margin: 0;
+  padding-right: 40px;
+  transition: 1s;
+}
+
+nav.color ul {
+  opacity: 1;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 1px 40px;;
 }
 
 .menu li a {
   text-decoration: none;
   text-transform: uppercase;
-  padding: 20px;
   font-size: 25px;
-  color: #444;
+  color: black;
 }
 
 .menu li a:link,
@@ -72,7 +57,7 @@ nav ul {
 
 .menu li a:hover,
 .menu li a:active {
-  background-color: rgb(207, 204, 204);
+  background-color: #444;
 }
 
 a:link,
@@ -82,13 +67,163 @@ a:visited {
   transition: background-color rgb(207, 204, 204) 4.2s, color 0.2s;
 }
 
+.menu-icon {
+  line-height: 60px;
+  width: 100%;
+  background: #fff;
+  text-align: right;
+  box-sizing: border-box;
+  padding: 15px 24px;
+  cursor: pointer;
+  color: #444;
+  display: none;
+}
 
-.banner {
+.logo {
+  position: fixed;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 2px;
+  position: relative;
+  width: 50px;
+}
+
+.logo img {
+  position: absolute;
+  top: 5px;
+  left: 35px;
+} 
+
+/* .banner {
   height: 677px;
   background: url(img/backwaik.png);
   background-repeat: no-repeat;
   background-size: cover;
+  padding-top: 800px;
+} */
+
+.banner{
+  background: #31859bff;  
+  background: -webkit-linear-gradient(to left, #31859bff, #31859bff);  
+  width: 100%;
+  height: 100vh;
 }
+
+.circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+  
+}
+
+.circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+  }
+
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+  }
+
+}
+
 
 /**********************************************
             *** ABOUT ***
@@ -175,6 +310,21 @@ a:visited {
 .logo-linkedin {
   position: absolute;
   bottom: 5px;
+}
+
+.logo-animated {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  margin: 10px;
+  transition-duration: 0.3s;
+  transition-property: box-shadow, transform;
+}
+.logo-animated:hover,
+.logo-animated:focus,
+.logo-animated:active {
+  transform: scale(1.2);
 }
 
 .illustration-about {
@@ -653,26 +803,6 @@ a:visited {
   width: 160px;
 }
 
-.contact-social {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 52px;
-  width: 100%;
-}
-
-.contact-social img {
-  margin: 20px;
-}
-
-.contact-github {
-  width: 40px;
-}
-
-.contact-linkedin {
-  width: 30px;
-}
-
 /**********************************************
             *** FOOTER ***
 **********************************************/
@@ -775,4 +905,45 @@ footer p {
     opacity: 0;
     transform: translate3d(0, 100%, 0);
   }
+}
+
+@media(max-width: 786px) {
+
+  .logo {
+        position: fixed;
+        top: 0;
+        margin-top: 16px;
+  }
+  nav{
+    max-width: 56.7%;
+  }
+  nav ul {
+        max-height: 0px;
+        background: #fff;
+  }
+
+  nav.black ul {
+    background: #fff;
+  }
+
+  .showing {
+        max-height: 34em;
+  }
+
+  nav ul li {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 24px;
+        text-align: center;
+  }
+
+  .menu-icon {
+        display: block;
+  }
+  .banner{
+    width: 726px;
+    background-size: cover;
+    background-color: red;
+  }
+
 }
